--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -316,7 +316,7 @@
 				</span>
 			</button>
 			<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-					*hasRole="['ESPECIALISTA_MEDICO']">
+					*appHasRole="['ESPECIALISTA_MEDICO']">
 				<span class="uppercase" [translate]="'internaciones.epicrisis.buttons.CONFIRM'"></span>
 			</button>
 		</section>
