--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/new-internment/new-internment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/new-internment/new-internment.component.html
@@ -127,7 +127,7 @@
 				</section>
 
 				<section>
-					<button *hasRole="['ADMINISTRATIVO']" mat-raised-button color="primary" type="submit">
+					<button *appHasRole="['ADMINISTRATIVO']" mat-raised-button color="primary" type="submit">
 						<span [translate]="'buttons.CONTINUE'"></span>
 					</button>
 				</section>
