--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/patient-bed-relocation/patient-bed-relocation.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/patient-bed-relocation/patient-bed-relocation.component.html
@@ -86,7 +86,7 @@
 						</section>
 
 						<section>
-							<button id="btnGenerate" name="btnGenerate" *hasRole="['ADMINISTRATIVO']" mat-raised-button color="primary" type="submit">
+							<button id="btnGenerate" name="btnGenerate" *appHasRole="['ADMINISTRATIVO']" mat-raised-button color="primary" type="submit">
 								<span [translate]="'buttons.GENERATE'"></span>
 							</button>
 						</section>
