--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -1,6 +1,6 @@
 <app-content width="full">
 	<section>
-		<div *hasRole="['ADMINISTRATIVO']">
+		<div *appHasRole="['ADMINISTRATIVO']">
 			<button *ngIf="internmentEpisode?.id" mat-raised-button color="primary" (click)="goInternmentEpisode()">
 				<span class="uppercase">Ver internación</span>
 			</button>
@@ -14,7 +14,7 @@
 				<div header class="header">
 					<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 					<ng-container>
-						<button mat-icon-button color="primary" *hasRole="['ADMINISTRATIVO']" (click)="goToEditProfile()">
+						<button mat-icon-button color="primary" *appHasRole="['ADMINISTRATIVO']" (click)="goToEditProfile()">
 							<mat-icon>edit</mat-icon>
 						</button>
 					</ng-container>
