--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.html
@@ -124,7 +124,7 @@
 					</mat-form-field>
 				</div>
 				<br>
-				<mat-action-row *hasRole="['ADMINISTRATIVO']">
+				<mat-action-row *appHasRole="['ADMINISTRATIVO']">
 					<button mat-stroked-button type="button" (click)="back()">
 						<span [translate]="'buttons.BACK'"></span>
 					</button>
@@ -141,7 +141,7 @@
 			<h3 class="mat-body-2" [translate]="'Se encontraron posibles coincidencias.'"></h3>
 			<app-table [model]="matchingPatient" [mainStyle]="'primary'"></app-table>
 			<div class="new-patient-button" align="end">
-				<button *hasRole="['ADMINISTRATIVO']" mat-raised-button id="new_patient_button" color="primary" (click)="goToNewPatient()">
+				<button *appHasRole="['ADMINISTRATIVO']" mat-raised-button id="new_patient_button" color="primary" (click)="goToNewPatient()">
 					<span [translate]="'pacientes.search.NEW_PATIENT'"></span>
 				</button>
 			</div>
