--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -76,7 +76,7 @@
 					</mat-form-field>
 				</mat-card-content>
 			</div>
-			<div *hasRole="['ADMINISTRATIVO']" align="end">
+			<div *appHasRole="['ADMINISTRATIVO']" align="end">
 				<button mat-flat-button color="primary" type="submit">
 					<span [translate]="'pacientes.home.find_add_section.BUTTON_SEARCH'"></span>
 				</button>
