--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -350,7 +350,7 @@
 						</button>
 					</mat-form-field>
 				</div>
-				<div *hasRole="['ADMINISTRATIVO']" class="form-buttons">
+				<div *appHasRole="['ADMINISTRATIVO']" class="form-buttons">
 					<button mat-stroked-button type="button" (click)="goBack()">
 						<span [translate]="'buttons.BACK'"></span>
 					</button>
