--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -15,7 +15,7 @@
 			</div>
 		</ng-container>
 		<ng-container *ngIf="editable">
-			<button matTooltip="{{ tooltip | translate }}" mat-icon-button *hasRole="canEdit" (click)="openInNew.emit()">
+			<button matTooltip="{{ tooltip | translate }}" mat-icon-button *appHasRole="canEdit" (click)="openInNew.emit()">
 				<mat-icon fontSet="material-icons-outlined">open_in_new</mat-icon>
 			</button>
 		</ng-container>
