tg-4048 Renombra selector de directiva featureFlag por appFeatureFlag

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -5,7 +5,7 @@
 			<h3 [translate]="'internaciones.anamnesis.SUBTITLE'"></h3>
 		</section>
 
-		<ng-container *featureFlag="'mainDiagnosisRequired'">
+		<ng-container *appFeatureFlag="'mainDiagnosisRequired'">
 			<ng-container *appHasRole="['ESPECIALISTA_MEDICO']">
 				<section id="diagnostico-principal">
 					<app-diagnostico-principal [diagnosis]="mainDiagnosis" (changeMainDiagnosis)="setMainDiagnosis($event)"></app-diagnostico-principal>
