--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -247,7 +247,7 @@
 					</button>
 				</div>
 
-				<ng-container *featureFlag="'agregarMedicosAdicionales'">
+				<ng-container *appFeatureFlag="'agregarMedicosAdicionales'">
 					<div class="form-row">
 						<div>
 							<div>
