--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -307,7 +307,7 @@
 				</button>
 			</div>
 
-			<ng-container *featureFlag="'agregarMedicosAdicionales'">
+			<ng-container *appFeatureFlag="'agregarMedicosAdicionales'">
 				<div class="form-row">
 					<div>
 						<div>
