--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/logo/logo.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/logo/logo.component.html
@@ -1,3 +1,3 @@
 <div class="img-logo-container">
-	<img [src]="img.location" [alt]="img.alt">
+	<img [src]="img.location" [alt]="img.alt | translate">
 </div>
