--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer-container {
-	background-color: #9c9fa3;
+	background-color: #e90000;
 	align-items: center;
 	text-align: center;
 	padding: 20px;
