tg-4071 Iconos/imagenes del Footer tiene que estar centrados

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.html
@@ -1,6 +1,5 @@
-<div class="footer-container" fxLayout="row wrap" fxLayoutAlign="space-around center">
-
-	<div class="footer-logos">
+<div class="footer-container" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around center">
+	<div class="footer-logos" fxFlex="70" fxFlexOffset.gt-sm="15" fxFlexOffset.lt-md="0">
 		<img src='assets/custom/footer/footer_left.png' [alt]="'logos.footer_left' | translate">
 		<img src='assets/custom/footer/footer_center.png' [alt]="'logos.footer_center' | translate">
 		<img src='assets/custom/footer/footer_right.png' [alt]="'logos.footer_right' | translate">
