tg-4183 [Mejora] [FE] Agregar espacio entre componentes

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
@@ -30,7 +30,7 @@
 			</mat-form-field>
 		</div>
 
-		<div id="problemas">
+		<div id="problemas" style="padding-bottom: 15px">
 			<app-new-document-section sectionTitle="guardia.episode.medical_discharge.problems.TITLE">
 				<div concept-form>
 					<app-concepts-search *ngIf="!problemasService.getSnomedConcept() else problemaForm"
